kubernetes/deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: tussi-services
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: us-central1-docker.pkg.dev/tussi-466501/microservices-repo/frontend:a66c26e
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
