kubernetes/products-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-db
  namespace: tussi-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
    spec:
      containers:
      - name: products-db
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: products-db-storage
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - user
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - user
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: products-db-storage
        persistentVolumeClaim:
          claimName: products-db-pvc
