kubernetes/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: tussi-services
  labels:
    app: products-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
        - name: products-service
          image: us-central1-docker.pkg.dev/tussi-466501/microservices-repo/products-api:REPLACE_WITH_TAG
          ports:
            - containerPort: 4001
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
