kubernetes/auth-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: tussi-services
spec:
  type: ClusterIP
  selector:
    app: auth-db
  ports:
    - port: 5432
      targetPort: 5432
