kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: tussi-services
  labels:
    app: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
