kubernetes/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: tussi-services
  labels:
    app: cart-service
spec:
  type: ClusterIP
  selector:
    app: cart-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
