kubernetes/carts-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  namespace: tussi-services
spec:
  type: ClusterIP
  selector:
    app: carts-db
  ports:
    - port: 27017
      targetPort: 27017
