kubernetes/products-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
  namespace: tussi-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
    spec:
      containers:
      - name: products-api
        image: us-central1-docker.pkg.dev/PROJECT_ID_REPLACE_ME/tussi-services/products-api:v1.0.0
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: products-api-service
  namespace: tussi-services
spec:
  selector:
    app: products-api
  ports:
  - port: 8000
    targetPort: 8000
