kubernetes/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  labels:
    app: products-service
spec:
  type: ClusterIP
  selector:
    app: products-service
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
