kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tussi-ingress
  namespace: tussi-services
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "tussi-certificate"
spec:
  rules:
  - host: "[YOUR_DOMAIN]"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
